--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "create-react-app-lambda",
+  "name": "profile-page",
   "version": "0.5.0",
   "private": true,
   "dependencies": {
@@ -15,7 +15,10 @@
     "build:app": "react-scripts build",
     "build:lambda": "netlify-lambda build src/lambda",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "webpack serve --mode=development",
+    "build-dev": "webpack --mode=development",
+    "build-prod": "webpack --mode=production"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -27,7 +30,20 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@babel/core": "^7.16.12",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "babel-loader": "^8.2.3",
+    "html-webpack-plugin": "^5.5.0",
     "netlify-lambda": "^1.4.5",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "webpack": "^5.67.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.3",
+    "css-loader": "^6.5.1",
+    "style-loader": "^3.3.1",
+    "file-loader": "^6.2.0",
+    "url-loader": "^4.1.1",
+    "mini-css-extract-plugin": "^2.5.3"
   }
 }
