--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@babel/core": "^7.16.12",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
-    "babel-loader": "^8.2.3",
+    "babel-loader": "8.0.5",
     "html-webpack-plugin": "^5.5.0",
     "netlify-lambda": "^1.4.5",
     "npm-run-all": "^4.1.5",
@@ -47,3 +47,4 @@
     "mini-css-extract-plugin": "^2.5.3"
   }
 }
+
