--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "html-webpack-plugin": "^5.5.0",
     "netlify-lambda": "^1.4.5",
     "npm-run-all": "^4.1.5",
-    "webpack": "^5.67.0",
+    "webpack": "4.29.6",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.3",
     "css-loader": "^6.5.1",
