--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "npm-run-all": "^4.1.5",
     "webpack": "4.29.6",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.7.3",
+    "webpack-dev-server": "3.2.1",
     "css-loader": "^6.5.1",
     "style-loader": "^3.3.1",
     "file-loader": "^6.2.0",
