--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.19.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "^3.0.1"
   },
   "scripts": {
@@ -34,17 +35,16 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "babel-loader": "8.0.5",
+    "css-loader": "^6.5.1",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.5.3",
     "netlify-lambda": "^1.4.5",
     "npm-run-all": "^4.1.5",
-    "webpack": "4.29.6",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "3.2.1",
-    "css-loader": "^6.5.1",
     "style-loader": "^3.3.1",
-    "file-loader": "^6.2.0",
     "url-loader": "^4.1.1",
-    "mini-css-extract-plugin": "^2.5.3"
+    "webpack": "^5.67.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.3"
   }
 }
-
