--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,11 @@
+# Settings in the [build] context are global and are applied to all contexts
+# unless otherwise overridden by more specific contexts.
+[build]
+  base    = ""
+  publish = "build/"
+  command = "yarn build"
 
-
-  [[redirects]]
+[[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
