--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "axios": "^0.19.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "^3.0.1"
+    "react-scripts": "^3.0.1",
+    "styled-components": "^5.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
